summative.moria.Moria.scala.error
Compilation error:
Moria:6: error: value or is not a member of Boolean
  while ( !isOverBaggle() or !isFacingWall()){
                          ^