summative.moria.Moria.scala.code


while(!isFacingWall()){
  
  
  while ( !isOverBaggle() or !isFacingWall()){
		backward()
  }
  
  if(isOverBaggle()){
    pickupBaggle()
    while(!isOverBaggle())
    	forward()
    dropBaggle()
    backward()
  }
  
  
}